Exercicio 02: Use o predicate para filtrar uma lista de inteiros.